--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 base="light"
-primaryColor="#1c19b5"
-secondaryBackgroundColor="#b3b3b3"
+primaryColor="#1C19B5"
+secondaryBackgroundColor="#B3B3B3"
 textColor="#010101"
